2004-04-17 arne

	* windows: support for alpha blended images like it is on Mac OS X with quartz
		   note: this implementation uses libpng (makro is USE_LIBPNG)
	* CDrawContext::setClipRect uses the offset now
	* COptionMenu::getSubMenu added
	* mac: fixed some quartz drawing stuff
	* mac: fix for CFrame::getPosition with quartz
	* mac: removed CARBON_EVENTS macro as it only works with QUARTZ
	
2004-04-11 arne
	
	* CViewContainer should be completely nestable now
	* mac: implemented the quartz offscreencontext for existing bitmaps
	
2004-03-23 arne

	* CTextEdit use the CParamDisplay::stringConvert functions to draw text
	* Fix of possible crash in CFileSelector::run
	* CFM Carbon plugs can now draw text antialiased even if the host does not support it
	(Thanks to Wolfram Franke for this stuff)

	* mac: added waitDoubleClick and waitDrag with carbon events

2004-03-19 arne

	* add CView::getFrameTopLeftPos method to get the topleft position of the view relative to the frame
	* call AEffGUIEditor instead of AudioEffectX for beginEdit and endEdit
	* mac: small changes to allow to use a CDrawContext on every Window even those without a CFrame

2004-03-01 arne

	* mac : fix for RGBA Bitmaps on Displays with less than million colors

2004-02-16 arne

	* mac : fix compile error in CDrawContext::getMouseLocation when compiling for CFM plugs

2004-02-06 arne

	* mac : focus fix

2004-02-01 arne

	* add empty CBitmap constructor for easy subclassing
	* mac : add beginEdit/endEndit hook for AudioUnits
	* windows : fix for CFrame::setSize for Orion submitted by Ben Allison

2004-01-02 arne

	* mac: corrected code for right mouse click with carbon events

2003-12-15 arne

	* fix a typo in COptionMenu::mouse
	* mac: fix a typo in CDrawContext::setLineStyle
	* mac: fix for CDrawContext::getMouseLocation problem with DP 4
	* mac: on compositing windows the control is now added to the kHIViewWindowContentID if it exists.